--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/util.js"></script>
 </head>
-<body>
+<body class="app sidebar-hidden">
   <app-root></app-root>
 </body>
 </html>
