--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
- 
+  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <script src="assets/js/sweetalert2@10.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/util.js"></script>
