--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
   <script src="assets/js/script.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/util.js"></script>
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
+  <link href="https://cdn.syncfusion.com/ej2/ej2-base/styles/material.css" rel="stylesheet" />
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-buttons/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-inputs/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-popups/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-calendars/styles/material.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
