--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,15 @@
   <script src="assets/js/script.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/util.js"></script>
-  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
-  <link href="https://cdn.syncfusion.com/ej2/ej2-base/styles/material.css" rel="stylesheet" />
-  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
-<link href="https://cdn.syncfusion.com/ej2/ej2-buttons/styles/material.css" rel="stylesheet" />
-<link href="https://cdn.syncfusion.com/ej2/ej2-inputs/styles/material.css" rel="stylesheet" />
-<link href="https://cdn.syncfusion.com/ej2/ej2-popups/styles/material.css" rel="stylesheet" />
-<link href="https://cdn.syncfusion.com/ej2/ej2-calendars/styles/material.css" rel="stylesheet" />
+  <link href="assets/css/material.css" rel="stylesheet" />
+  <link href="assets/css/materialnew.css" rel="stylesheet" />
+  <link href="assets/css/ej2material.css" rel="stylesheet" />
+  <link href="assets/css/buttonmaterial.css" rel="stylesheet" />
+  <link href="assets/css/inputmaterial.css" rel="stylesheet" />
+  <link href="assets/css/popmaterial.css" rel="stylesheet" />
+  <link href="assets/css/calendermaterial.css" rel="stylesheet" />
+
+<link href="" rel="stylesheet" />
 </head>
 <body class="app sidebar-hidden">
   <app-root></app-root>
